tests/sksl/errors/PrivateVariables.glsl
### Compilation failed:

error: 1: name '$a' is reserved
error: 2: name '$b' is reserved
error: 3: name '$c' is reserved
error: 4: name '$d' is reserved
4 errors
